more updates to coming soon and waitlist
