# common/models/Promotion.ts
@@ -1,0 +1,8 @@
+import { Entity } from "./Entity";
+
+export interface Promotion {
+    code: string,
+    name: string
+};
+
+export type PromotionRecord = Entity & Promotion;
