# common/models/WaitlistItem.ts
@@ -1,5 +1,12 @@
+import { Entity } from "./Entity";
+
 export interface WaitlistItem {
     email: string,
+    firstName: string,
+    lastName: string,
     isStayer: boolean,
-    isHost: boolean
+    isHost: boolean,
+    promoCode?: string
 };
+
+export type WaitlistItemRecord = Entity & WaitlistItem;
